# GTD

./: .gitignore  CMakeLists.txt  README.md  gradle-template.json  main.cpp
.cache/clangd/index/: main.cpp.352099F85A0E5E05.idx
